Fix to layout tags

--- a/moz_au_web/templates/layout.html
+++ b/moz_au_web/templates/layout.html
@@ -88,9 +88,11 @@
             {% block content %}{% endblock %}
         </div>
     </div>
+</div>
 
   </div>
 
+</div><!-- end container -->
 
 {% include "footer.html" %}
 
