--- a/moz_au_web/templates/layout.html
+++ b/moz_au_web/templates/layout.html
@@ -29,6 +29,8 @@
     <script src="{{ url_for('static', filename='js/jquery-1.8.3.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/angular-route.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ui-bootstrap-0.11.0.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ui-bootstrap-tpls-0.11.0.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/controller.js') }}"></script>
     <style type="text/css">
         /* 1st level */
@@ -88,6 +90,7 @@
             {% block content %}{% endblock %}
         </div>
     </div>
+
 </div>
 
   </div>
