Added ability to manage order and scripts to be ran via web interface

--- a/moz_au_web/templates/layout.html
+++ b/moz_au_web/templates/layout.html
@@ -146,6 +146,9 @@
                             <ul class="nav tree">
                                 <li><a href="#">Broken Updates</a></li>
                             </ul>
+                            <ul class="nav tree">
+                                <li><a href="/#/scripts/">Script Management</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
