Initial many-to-many relationship between systems and update groups

--- a/moz_au_web/templates/layout.html
+++ b/moz_au_web/templates/layout.html
@@ -149,6 +149,9 @@
                             <ul class="nav tree">
                                 <li><a href="/#/scripts/">Script Management</a></li>
                             </ul>
+                            <ul class="nav tree">
+                                <li><a href="/#/scripts/">Groups</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
