Updates for amqps and group management

--- a/moz_au_web/templates/layout.html
+++ b/moz_au_web/templates/layout.html
@@ -150,7 +150,7 @@
                                 <li><a href="/#/scripts/">Script Management</a></li>
                             </ul>
                             <ul class="nav tree">
-                                <li><a href="/#/scripts/">Groups</a></li>
+                                <li><a href="/#/groups/">Groups</a></li>
                             </ul>
                         </li>
                     </ul>
