--- a/moz_au_web/templates/layout.html
+++ b/moz_au_web/templates/layout.html
@@ -32,6 +32,7 @@
     <script src="{{ url_for('static', filename='js/ui-bootstrap-0.11.0.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ui-bootstrap-tpls-0.11.0.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/angular-drag-and-drop-lists.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/angular-flash.js') }}"></script>
     <script src="{{ url_for('static', filename='js/controller.js') }}"></script>
     <style type="text/css">
         /* 1st level */
